app/assets/stylesheets/application.css.scss
 /*
 *= require_tree .
 *= require_self
 *= require foundation_and_overrides

COLOR PALLET
charcoal  color: #373737
Silk      color: #DCD0C0
Paper     color: #F4F4F4
Pale Gold color: #C0B283
 */

* {
  list-style: none;
  margin: 0;
  padding: 0;
  color: #373737;
  background-color: #F4F4F4;
}

body {
  clear: both;
  font-family: 'Cormorant Garamond', serif;
  font-size: 16px;
  color: #373737;
}



h1, h1 a {
  font-family: 'Codystar', cursive;
  font-weight: bold;
  color: #C0B283
}

h2, h3 {
  font-family: 'Sail', cursive;
}
h4, p{
  font-family: 'Quattrocento Sans', sans-serif;
}

a:hover {
  color: #DCD0C0;
  font-weight: bold;
}

a {
  color: #373737;
}

.button {
  background-color: #DCD0C0;
  color: white;
  font-weight: bold;
}

.button:hover {
  background-color: #C0B283;
}


/*Specific to application.html*/
.checkout {
  background-color: #C0B283;
  display: block;
  margin: auto;
}

.checkout:hover {
  background-color: #DCD0C0
}

.title {
  text-align: center;
}



/*header*/
header {
  height: 100px;
  background-color: #F4F4F4;
}

header h1.main-header {
  padding: 0;
  font-size: 3em;
}

#top-row {
  border-bottom: solid 2px #DCD0C0;
}

.header-login {
  float: right;
  display: block;
  margin-top: 10px;
  margin-bottom: 0;
}

.header-login li {
  display: inline-block;
  margin-left: 10px;
}

.cart img {
  height: 40px;
}

.cart {
  margin: 10px;
  text-align: right;
  margin-top: 15px;
  font-size: 1.5em;
}

.login {
  margin-right: 10px;
}

.shop-by li {
  display: inline-block;
  font-size: 1.25em;
  margin: 0 10px;
  float: left;
}

.shop-by {
  margin: 0;
  padding: 0;
  padding-bottom: 10px;
  // text-align: center;

}

/*Adding Styling for the categories index page*/
.hero {
  height: 275px;
}

.top-photos {
  height: 200px;
}

img.carousel {
  height: 200px;
}

.carousel {
  text-align: center;
  /*margin:0 25%;*/
  display: block;
  margin: auto;
}

#slogan {
  margin-top: 0px;
  padding: 50px 50px;
  font-family: 'Cormorant Garamond', serif;
  font-size: 3em;
  background-color: #DCD0C0;
  color: white;
}


 /*All Index Pages*/
div.title {
  clear: both;
}

.index h3 {
  margin-top: 20px;
  font-size: 2.5em;
  clear:both;
}

 .grid-item {
   text-align: center;
   margin: 20px 0px;
   overflow: auto;
   font-size: 1.5em;
  }

.category-name {

}


.index_photo {
  height: 100px;
}

.border {
  width: 90%;
  height: 200px;
  border: 2px dotted #C0B283;
  padding: 10px;
  overflow: auto;
 }

 .user-border {
   width: 90%;
   height: 75px;
   border: 2px dotted #C0B283;
   padding: 10px;
   overflow: auto;
 }


 /*Show page*/

 .categories-list {
   display: block;
   text-align: center;

 }

 .categories-list li {
   display: inline-block;
   padding: 0 25px;
 }

 .show {
  font-size: 1.25em;
 }

 .product_photo {
   width: 100%;
   padding: 0 2%;
 }

.reviews {
  height: 400px;
  border: 2px dotted #C0B283;
  overflow: scroll;
}

.review-date {
  padding-left: 10px;
}

.review-edit-button {
  margin-top: 10px;
}

.right {
  float: right;
}

.rating-number {
  size: 2em;
}

.sales-summary {
  display: block;
  text-align: center;
}
/*Cart Page*/
.cart-items {
  margin: 10px 0;
  font-size: 1.25em;
}

/*Checkout page*/
.checkout {
  margin-top: 20px;
}

th {
  text-align: left;
}

.price {
  font-size: 2em;
}

// flash

.flash {
  text-align: center;
  font-family: 'League Script', cursive;
}
.error, .failure {
  color: red;
}

.success {
  color: green;
}

// footer
footer {
  margin-top: -20;
  height: 75px;
}
footer div {
  display: block;
  text-align: center;
}

footer div p {
  padding-top: 20px;
}

.jolly-owl {
  display: block;
  text-align: center;
}

.credit {
  font-size: 3em;
  padding: 20px 0;
}

.names li {
  padding: 5px 0;
}

.order-history-title {
  text-align: left;
}


.my-products-list {
  padding-bottom: 20px;
}

